# auto-allocator

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: README.md  allocator_benchmark.rs
examples/embedded_system/: Cargo.toml  README.md  build.rs  memory.x
examples/embedded_system/.cargo/: config.toml
examples/embedded_system/src/: main.rs
examples/optimization_check/: README.md  main.rs
examples/simple_demo/: README.md  main.rs
examples/web_server/: README.md  main.rs
src/: lib.rs
tests/: platform_compatibility.rs
